Grace/tests/gibbs/errors/t241.grace
// ERROR = P1040
if (false) then {
    print "false"
} elseif ) then {
    print "true"
}
